--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Maxwell Wang</title>
+    <style>
+        body {
+            background-color: #444444;
+        }
+
+        h1 {
+            color: #003fff;
+        }
+
+        p {
+            color: #ffffff;
+        }
+    </style>
 </head>
 <body>
-Welcome to my website!
+<h1>Maxwell Wang</h1>
+<p>Welcome to my website!</p>
 </body>
 </html>
