added images and rearranged home page format

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 <style>
     html, body, h1, h2, h3, h4, h5 {
-        font-family: "Raleway", sans-serif
+        font-family: "Raleway", -apple-system;
     }
 
     h5 {
@@ -21,32 +21,51 @@
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main">
+    <nav>
+        <div class="w3-row-padding w3-margin-bottom">
+            <div class="w3-quarter">
+                <div class="w3-container w3-blue w3-padding-16" style="text-align: center">
+                    <a href="index.html"><h4>Home</h4></a>
+                </div>
+            </div>
+            <div class="w3-quarter">
+                <div class="w3-container w3-blue w3-padding-16" style="text-align: center">
+                    <h4>About</h4>
+                </div>
+            </div>
+            <div class="w3-quarter">
+                <div class="w3-container w3-blue w3-padding-16" style="text-align: center">
+                    <h4>Temp</h4>
+                </div>
+            </div>
+            <div class="w3-quarter">
+                <div class="w3-container w3-blue w3-text-white w3-padding-16" style="text-align: center">
+                    <a href="https://docs.google.com/document/d/1vxM9izenECZMIF9DuuymBzhburD6p6WzbjpzvHHPBDA/edit?usp=sharing"><h4>Resume</h4></a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <!-- Header -->
     <header class="w3-container">
         <h5><b>Maxwell Wang</b></h5>
     </header>
 
-    <div class="w3-row-padding w3-margin-bottom">
-        <div class="w3-quarter">
-            <div class="w3-container w3-red w3-padding-16" style="text-align: center">
-                <h4>Messages</h4>
-            </div>
+    <div class="row">
+        <div class="column w3-container w3-text-white w3-padding-16" style="text-align: left">
+            <h4><b><u>Present</u></b></h4>
+            <h4>Rutgers University Honors College Sophomore</h4>
+            <h4>Aresty Research Center Undergraduate Research Assistant (Fall 2020 - Spring 2021)</h4>
+            <br>
+            <h4><b><u>Future</u></b></h4>
+            <h4>Incoming iCIMS Software Engineering Intern (Summer 2021)</h4>
+            <br>
+            <h4><b><u>Past</u></b></h4>
+            <h4>Rutgers Cyberlearning Innovation and Research Center Software Engineering Intern (Summer 2020)</h4>
         </div>
-        <div class="w3-quarter">
-            <div class="w3-container w3-blue w3-padding-16" style="text-align: center">
-                <h4>Views</h4>
-            </div>
-        </div>
-        <div class="w3-quarter">
-            <div class="w3-container w3-teal w3-padding-16" style="text-align: center">
-                <h4>Shares</h4>
-            </div>
-        </div>
-        <div class="w3-quarter">
-            <div class="w3-container w3-orange w3-text-white w3-padding-16" style="text-align: center">
-                <h4>Users</h4>
-            </div>
+
+        <div class="column imgbox" style="alignment: right">
+            <img class="center-fit" src="images/liberty.jpg" id="profile" alt="Me at Liberty State Park">
         </div>
     </div>
     <!-- End page content -->
