--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="style.css">
 <style>
     html, body, h1, h2, h3, h4, h5 {
-        font-family: "Raleway", -apple-system;
+        font-family: "Raleway", sans-serif;
     }
 
     h5 {
