updated resume link to pdf instead of docs

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="w3-quarter">
                 <div class="w3-container w3-blue w3-text-white w3-padding-16" style="text-align: center">
-                    <a href="https://docs.google.com/document/d/1vxM9izenECZMIF9DuuymBzhburD6p6WzbjpzvHHPBDA/edit?usp=sharing"><h4>Resume</h4></a>
+                    <a href="https://drive.google.com/file/d/1uRlUqJKo-xscN45A1qwWYsiXzn743sSS/view?usp=sharing"><h4>Resume</h4></a>
                 </div>
             </div>
         </div>
