--- a/Maxwell-Wang.html
+++ b/Maxwell-Wang.html
@@ -32,7 +32,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-0b38"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-0b38"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Maxwell-Wang.html" data-page-id="438501479" class="u-image u-logo u-image-1" data-image-width="101" data-image-height="57" title="Maxwell Wang">
           <img src="images/logo1.png" class="u-logo-image u-logo-image-1" data-image-width="101">
         </a>
