--- a/About.html
+++ b/About.html
@@ -53,7 +53,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <img src="images/logo1.png" alt="" class="u-image u-image-default u-image-1" data-image-width="101" data-image-height="57">
+        <img src="images/logo1.png" alt="" class="u-image u-image-default u-image-1" data-image-width="101" data-image-height="57" data-href="Maxwell-Wang.html" data-page-id="438501479">
       </div></header>
     <section class="u-align-left u-clearfix u-white u-section-1" id="carousel_d104">
       <div class="u-clearfix u-sheet u-sheet-1">
@@ -61,12 +61,12 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-black u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-                <div class="u-border-10 u-border-custom-color-1 u-container-layout u-container-layout-1">
+                <div class="u-container-layout u-container-layout-1">
                   <p class="u-text u-text-1">To be filled...</p>
                 </div>
               </div>
               <div class="u-align-right-md u-align-right-sm u-align-right-xs u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-1" data-image-width="1280" data-image-height="1600">
-                <div class="u-container-layout u-valign-bottom-md u-container-layout-2">
+                <div class="u-container-layout u-container-layout-2">
                   <h1 class="u-text u-text-body-alt-color u-text-2">About</h1>
                 </div>
               </div>
@@ -78,7 +78,7 @@
     
     
     <footer class="u-black u-clearfix u-footer u-footer" id="sec-23fc"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <img src="images/logo1.png" alt="" class="u-align-center u-image u-image-default u-image-1" data-image-width="101" data-image-height="57">
+        <img src="images/logo1.png" alt="" class="u-align-center u-image u-image-default u-image-1" data-image-width="101" data-image-height="57" data-href="Maxwell-Wang.html" data-page-id="438501479">
       </div></footer>
   </body>
 </html>
