--- a/About.html
+++ b/About.html
@@ -30,15 +30,15 @@
   <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-0b38"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
-            <a class="u-active-black u-black u-border-10 u-border-active-custom-color-1 u-border-custom-color-7 u-border-hover-custom-color-1 u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hover-black u-nav-link u-radius-50 u-text-custom-color-7" href="#">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-custom-color-7" href="#">
               <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8a8f"></use></svg>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-8a8f" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-black u-black u-border-10 u-border-active-custom-color-1 u-border-custom-color-7 u-border-hover-custom-color-1 u-button-style u-hover-black u-nav-link u-radius-50 u-text-active-white u-text-custom-color-7 u-text-hover-white" href="Maxwell-Wang.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-active-black u-black u-border-10 u-border-active-custom-color-1 u-border-custom-color-7 u-border-hover-custom-color-1 u-button-style u-hover-black u-nav-link u-radius-50 u-text-active-white u-text-custom-color-7 u-text-hover-white" style="padding: 10px 20px;" href="About.html">About</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-7 u-text-hover-white" href="Maxwell-Wang.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-7 u-text-hover-white" style="padding: 10px 20px;" href="About.html">About</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -57,17 +57,20 @@
       </div></header>
     <section class="u-align-left u-clearfix u-white u-section-1" id="carousel_d104">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+        <div class="u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
-              <div class="u-black u-container-style u-layout-cell u-left-cell u-size-30 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1">
-                  <p class="u-text u-text-1">To be filled...</p>
+              <div class="u-black u-container-style u-layout-cell u-left-cell u-radius-50 u-shape-round u-size-30 u-layout-cell-1">
+                <div class="u-border-10 u-border-custom-color-1 u-container-layout u-valign-top u-container-layout-1">
+                  <p class="u-text u-text-1">Hey, welcome to my website! My name's Maxwell and I'm a Rutgers Honors College sophomore majoring in CS. I'm also an Aresty undergraduate research assistant and incoming software engineering intern at iCIMS. In my offtime, I work on my website, play Among Us or Phasmophobia with friends, and watch Haikyuu or My Hero Academia. I like taking pictures and I'd like to get better at it and have cooler settings to take them in. Anyone who knows me will tell you I'm a very simple person.<br>
+                    <br><b>Programming Languages</b>: Java, Python, C++, C, MySQL, HTML/CSS, and JavaScript
+                  </p>
                 </div>
               </div>
-              <div class="u-align-right-md u-align-right-sm u-align-right-xs u-container-style u-image u-layout-cell u-right-cell u-size-30 u-image-1" data-image-width="1280" data-image-height="1600">
-                <div class="u-container-layout u-container-layout-2">
-                  <h1 class="u-text u-text-body-alt-color u-text-2">About</h1>
+              <div class="u-align-right-md u-align-right-sm u-align-right-xs u-black u-container-style u-layout-cell u-radius-50 u-right-cell u-shape-round u-size-30 u-layout-cell-2">
+                <div class="u-border-10 u-border-custom-color-1 u-container-layout u-valign-bottom u-container-layout-2">
+                  <img class="u-expand-resize u-image u-image-1" src="images/20200920-IMG_4157.jpg" data-image-width="1280" data-image-height="1600">
+                  <h1 class="u-align-right u-text u-text-body-alt-color u-text-2">About</h1>
                 </div>
               </div>
             </div>
