--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-0b38"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-align-center-sm u-align-center-xs u-black u-clearfix u-header u-header" id="sec-0b38"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <nav class="u-align-right u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 700;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-custom-color-7" href="#">
