--- a/Maxwell-Wang.html
+++ b/Maxwell-Wang.html
@@ -59,7 +59,7 @@
     <section class="u-align-center u-clearfix u-gradient u-section-1" id="carousel_89dc">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-title u-text-1">Maxwell Wang</h1>
-        <div alt="" class="u-image u-image-circle u-image-1" data-image-width="1600" data-image-height="1600"></div>
+        <div alt="" class="u-image u-image-circle u-image-1"></div>
         <div class="u-clearfix u-expanded-width u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
