--- a/Maxwell-Wang.html
+++ b/Maxwell-Wang.html
@@ -110,15 +110,15 @@
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-row">
               <div class="u-align-left u-black u-container-style u-layout-cell u-radius-50 u-shape-round u-size-60 u-layout-cell-1">
-                <div class="u-border-10 u-border-custom-color-1 u-container-layout u-container-layout-1">
-                  <h2 class="u-text u-text-1">More Maxwell!</h2>
+                <div class="u-border-10 u-border-custom-color-1 u-container-layout u-valign-top u-container-layout-1">
+                  <h2 class="u-align-center u-text u-text-1">More Maxwell!</h2>
+                  <a href="About.html" data-page-id="236525117" class="u-btn u-btn-round u-button-style u-radius-50 u-white u-btn-1">About</a>
                   <div class="u-social-icons u-spacing-10 u-social-icons-1">
                     <a class="u-social-url" target="_blank" href="https://www.instagram.com/maxwellwangg/"><span class="u-icon u-icon-circle u-social-instagram u-social-type-fill u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-c0c2"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-c0c2"><path d="M56.1,0C25.1,0,0,25.1,0,56.1c0,31,25.1,56.1,56.1,56.1c31,0,56.1-25.1,56.1-56.1C112.2,25.1,87.1,0,56.1,0z M90.6,73.4c0,9.6-7.8,17.5-17.5,17.5H38.6c-9.6,0-17.5-7.9-17.5-17.6V38.8c0-9.6,7.8-17.5,17.5-17.5h34.5c9.6,0,17.5,7.8,17.5,17.5 V73.4z"></path><path d="M73.1,28.9H38.6c-5.4,0-9.9,4.4-9.9,9.9v34.5c0,5.4,4.4,9.9,9.9,9.9h34.5c5.4,0,9.9-4.4,9.9-9.9V38.8 C83,33.4,78.6,28.9,73.1,28.9z M55.9,74C46,74,38,66,38,56.1c0-9.9,8-17.9,17.9-17.9c9.9,0,17.9,8,17.9,17.9 C73.8,66,65.8,74,55.9,74z M74.3,41.9c-2.3,0-4.2-1.9-4.2-4.2s1.9-4.2,4.2-4.2c2.3,0,4.2,1.9,4.2,4.2S76.6,41.9,74.3,41.9z"></path><path d="M55.9,45.8c-5.7,0-10.4,4.6-10.3,10.3c0,5.7,4.6,10.3,10.3,10.3s10.3-4.6,10.3-10.3 C66.2,50.4,61.6,45.8,55.9,45.8z"></path></svg></span>
                     </a>
                     <a class="u-social-url" target="_blank" href="https://linkedin.com/in/maxwell-wang-438b10191/"><span class="u-icon u-icon-circle u-social-linkedin u-social-type-fill u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b2bc"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-b2bc"><path d="M62.1,49.3v-0.1C62.1,49.2,62,49.2,62.1,49.3L62.1,49.3z"></path><path d="M56.1,0C25.1,0,0,25.1,0,56.1s25.1,56.1,56.1,56.1c31,0,56.1-25.1,56.1-56.1S87.1,0,56.1,0z M41.3,83.7H27.9 V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7c4.6,0,7.4,3,7.5,7C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5H48.7c0,0,0.2-36.5,0-40.3h13.4 v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
                     </a>
                   </div>
-                  <a href="About.html" data-page-id="236525117" class="u-btn u-btn-round u-button-style u-radius-50 u-white u-btn-1">About</a>
                 </div>
               </div>
             </div>
