--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </g>
 </g></svg></span>
                   <h3 class="u-align-center u-text u-text-body-alt-color u-text-4">iCIMS</h3>
-                  <p class="u-align-center u-text u-text-body-alt-color u-text-5">Will be interning as a software engineer developing talent acquisition software</p>
+                  <p class="u-align-center u-text u-text-body-alt-color u-text-5">Attended mentorship program about Agile Scrum programming, design patterns, and unit testing</p>
                 </div>
               </div>
               <div class="u-align-center u-black u-container-style u-layout-cell u-radius-50 u-right-cell u-shape-round u-size-20 u-layout-cell-3">
