--- a/Maxwell-Wang.html
+++ b/Maxwell-Wang.html
@@ -64,21 +64,21 @@
     <section class="u-clearfix u-grey-90 u-section-2" id="sec-00e6">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-expanded-width u-list u-repeater u-list-1">
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
               <h3 class="u-text u-text-1">Aresty Research</h3>
               <p class="u-text u-text-2">I designed an interface to run hundreds of deep learning models and recorded data on their performance and architecture</p>
               <img src="images/Aresty_Logo.png" alt="" class="u-image u-image-contain u-image-default u-image-1" data-image-width="980" data-image-height="383">
             </div>
           </div>
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
               <h3 class="u-text u-text-3">Rutgers CIRC</h3>
               <p class="u-text u-text-4">I developed modules to generate randomized problems used in Rutgers online education homeworks and exams.</p>
               <img src="images/Rutgers_Circ_Logo.png" alt="" class="u-image u-image-contain u-image-default u-image-2" data-image-width="1600" data-image-height="511">
             </div>
           </div>
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">
+          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
               <h3 class="u-text u-text-5">Photography</h3>
               <p class="u-text u-text-6">I've learned how to manually adjust shutter speed, aperture, and ISO levels, but I still need to work on shot composition and post-editing.</p>
