--- a/index.html
+++ b/index.html
@@ -57,32 +57,32 @@
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div alt="" class="u-align-left u-image u-image-circle u-image-1" src="" data-image-width="3026" data-image-height="3026"></div>
         <h1 class="u-heading-font u-text u-title u-text-1">Maxwell Wang</h1>
-        <p class="u-large-text u-text u-text-variant u-text-2">Welcome to my website! I'm a Rutgers Honors College sophomore majoring in CS. I'm also an undergraduate research assistant studying neural networks at Aresty Research center.<br>
+        <p class="u-large-text u-text u-text-variant u-text-2">Welcome to my website! I'm a Rutgers Honors College sophomore majoring in computer science. I'm also an undergraduate research assistant studying neural networks at Aresty Research center.<br>
         </p>
       </div>
     </section>
     <section class="u-clearfix u-grey-90 u-section-2" id="sec-00e6">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-expanded-width u-list u-repeater u-list-1">
           <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
+            <div class="u-container-layout u-similar-container u-container-layout-1">
               <h3 class="u-text u-text-1">Aresty Research</h3>
               <p class="u-text u-text-2">I designed an interface to run hundreds of deep learning models and recorded data on their performance and architecture</p>
-              <img src="images/Aresty_Logo.png" alt="" class="u-image u-image-contain u-image-default u-image-1" data-image-width="980" data-image-height="383">
+              <img src="images/Aresty_Logo.png" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" data-image-width="980" data-image-height="383">
             </div>
           </div>
           <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
+            <div class="u-container-layout u-similar-container u-container-layout-2">
               <h3 class="u-text u-text-3">Rutgers CIRC</h3>
               <p class="u-text u-text-4">I developed modules to generate randomized problems used in Rutgers online education homeworks and exams.</p>
-              <img src="images/Rutgers_Circ_Logo.png" alt="" class="u-image u-image-contain u-image-default u-image-2" data-image-width="1600" data-image-height="511">
+              <img src="images/Rutgers_Circ_Logo.png" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-2" data-image-width="1600" data-image-height="511">
             </div>
           </div>
           <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
+            <div class="u-container-layout u-similar-container u-container-layout-3">
               <h3 class="u-text u-text-5">Photography</h3>
               <p class="u-text u-text-6">I've learned how to manually adjust shutter speed, aperture, and ISO levels, but I still need to work on shot composition and post-editing.</p>
-              <img src="images/20200801-IMG_3389.jpg" alt="" class="u-image u-image-contain u-image-default u-image-3">
+              <img src="images/20200801-IMG_3389.jpg" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-3">
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Updated Dec 2020</p>
       </div></footer>
   </body>
