--- a/Maxwell-Wang.html
+++ b/Maxwell-Wang.html
@@ -20,7 +20,11 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Maxwell",
-		"url": "index.html"
+		"url": "index.html",
+		"sameAs": [
+				"https://www.instagram.com/maxwellwangg",
+				"https://linkedin.com/in/maxwellwang01"
+		]
 }</script>
     <meta property="og:title" content="Maxwell Wang">
     <meta property="og:type" content="website">
@@ -28,7 +32,7 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body class="u-body"><header class="u-clearfix u-grey-80 u-header u-header" id="sec-c15c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body class="u-body"><header class="u-clearfix u-grey-80 u-header u-sticky u-header" id="sec-c15c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <nav class="u-align-left u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-offcanvas-shift u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse">
             <a class="u-button-style u-nav-link" href="#" style="font-size: calc(1em + 8px);">
@@ -39,6 +43,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-black u-border-10 u-border-custom-color-1 u-button-style u-hover-black u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="Maxwell-Wang.html" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-active-black u-border-10 u-border-custom-color-1 u-button-style u-hover-black u-nav-link u-text-active-white u-text-grey-90 u-text-hover-white" href="" style="padding: 10px 20px;">About</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -55,7 +60,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-17b4">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div alt="" class="u-align-left u-image u-image-circle u-image-1" src="" data-image-width="3026" data-image-height="3026"></div>
+        <div alt="" class="u-align-left u-image u-image-circle u-image-1" data-image-width="3026" data-image-height="3026"></div>
         <h1 class="u-heading-font u-text u-title u-text-1">Maxwell Wang</h1>
         <p class="u-large-text u-text u-text-variant u-text-2">Welcome to my website! I'm a Rutgers Honors College sophomore majoring in computer science. I'm also an undergraduate research assistant studying neural networks at Aresty Research center.<br>
         </p>
@@ -71,7 +76,7 @@
               <img src="images/Aresty_Logo.png" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" data-image-width="980" data-image-height="383">
             </div>
           </div>
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
+          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-custom-background u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
             <div class="u-container-layout u-similar-container u-container-layout-2">
               <h3 class="u-text u-text-3">Rutgers CIRC</h3>
               <p class="u-text u-text-4">I developed modules to generate randomized problems used in Rutgers online education homeworks and exams.</p>
@@ -90,7 +95,13 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-sheet-1">
+        <div class="u-social-icons u-spacing-10 u-social-icons-1">
+          <a class="u-social-url" target="_blank" href="https://www.instagram.com/maxwellwangg"><span class="u-icon u-icon-circle u-social-instagram u-social-type-fill u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4981"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-4981"><path d="M56.1,0C25.1,0,0,25.1,0,56.1c0,31,25.1,56.1,56.1,56.1c31,0,56.1-25.1,56.1-56.1C112.2,25.1,87.1,0,56.1,0z M90.6,73.4c0,9.6-7.8,17.5-17.5,17.5H38.6c-9.6,0-17.5-7.9-17.5-17.6V38.8c0-9.6,7.8-17.5,17.5-17.5h34.5c9.6,0,17.5,7.8,17.5,17.5 V73.4z"></path><path d="M73.1,28.9H38.6c-5.4,0-9.9,4.4-9.9,9.9v34.5c0,5.4,4.4,9.9,9.9,9.9h34.5c5.4,0,9.9-4.4,9.9-9.9V38.8 C83,33.4,78.6,28.9,73.1,28.9z M55.9,74C46,74,38,66,38,56.1c0-9.9,8-17.9,17.9-17.9c9.9,0,17.9,8,17.9,17.9 C73.8,66,65.8,74,55.9,74z M74.3,41.9c-2.3,0-4.2-1.9-4.2-4.2s1.9-4.2,4.2-4.2c2.3,0,4.2,1.9,4.2,4.2S76.6,41.9,74.3,41.9z"></path><path d="M55.9,45.8c-5.7,0-10.4,4.6-10.3,10.3c0,5.7,4.6,10.3,10.3,10.3s10.3-4.6,10.3-10.3 C66.2,50.4,61.6,45.8,55.9,45.8z"></path></svg></span>
+          </a>
+          <a class="u-social-url" target="_blank" href="https://linkedin.com/in/maxwellwang01"><span class="u-icon u-icon-circle u-social-linkedin u-social-type-fill u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-a069"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-a069"><path d="M62.1,49.3v-0.1C62.1,49.2,62,49.2,62.1,49.3L62.1,49.3z"></path><path d="M56.1,0C25.1,0,0,25.1,0,56.1s25.1,56.1,56.1,56.1c31,0,56.1-25.1,56.1-56.1S87.1,0,56.1,0z M41.3,83.7H27.9 V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7c4.6,0,7.4,3,7.5,7C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5H48.7c0,0,0.2-36.5,0-40.3h13.4 v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
+          </a>
+        </div>
         <p class="u-small-text u-text u-text-variant u-text-1">Updated Dec 2020</p>
       </div></footer>
   </body>
