--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-align-left u-clearfix u-grey-80 u-header u-sticky u-header" id="sec-c15c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body data-home-page="Maxwell-Wang.html" data-home-page-title="Maxwell Wang" class="u-body"><header class="u-align-left u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-c15c"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; text-transform: uppercase; font-weight: 500;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-white u-text-grey-50 u-text-hover-white" href="#">
+            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-white u-text-grey-25 u-text-hover-white" href="#">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </symbol>
@@ -43,8 +43,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-grey-50 u-text-hover-white" href="Maxwell-Wang.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-grey-50 u-text-hover-white" href="About.html" style="padding: 10px 20px;">About</a>
+            <ul class="u-nav u-spacing-2 u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-grey-25 u-text-hover-white" href="Maxwell-Wang.html" style="padding: 10px 20px;">Home</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -52,7 +51,6 @@
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Maxwell-Wang.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html" style="padding: 10px 20px;">About</a>
 </li></ul>
               </div>
             </div>
@@ -61,35 +59,35 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-17b4">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div alt="" class="u-align-left u-image u-image-circle u-image-1" data-image-width="3026" data-image-height="3026"></div>
         <h1 class="u-heading-font u-text u-title u-text-1">Maxwell Wang</h1>
-        <p class="u-large-text u-text u-text-variant u-text-2">Welcome to my website! I'm a Rutgers Honors College sophomore majoring in computer science. I'm also an undergraduate research assistant studying neural networks at Aresty Research center.<br>
+        <p class="u-large-text u-text u-text-variant u-text-2">Welcome to my website! I'm a Rutgers Honors College sophomore majoring in computer science and an undergraduate research assistant studying neural networks at Aresty Research center. In the future I'd like to host a full stack web app on this site.<br>
         </p>
       </div>
     </section>
     <section class="u-clearfix u-grey-90 u-section-2" id="sec-00e6">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-expanded-width u-list u-repeater u-list-1">
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-1">
-            <div class="u-container-layout u-similar-container u-container-layout-1">
-              <h3 class="u-text u-text-1">Aresty Research</h3>
-              <p class="u-text u-text-2">I designed an interface to run hundreds of deep learning models and recorded data on their performance and architecture</p>
-              <img src="images/Aresty_Logo.png" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-1" data-image-width="980" data-image-height="383">
+          <div class="u-container-style u-custom-color-1 u-list-item u-radius-50 u-repeater-item u-shape-round u-list-item-1">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
+              <h3 class="u-align-center u-text u-text-1">Aresty Research</h3>
+              <p class="u-align-left u-text u-text-2">I designed an interface to run hundreds of deep learning models and recorded data on their performance and architecture</p>
+              <img src="images/aresty.png" alt="" class="u-image u-image-round u-preserve-proportions u-radius-10 u-image-1" data-image-width="200" data-image-height="200">
             </div>
           </div>
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-custom-background u-list-item u-repeater-item u-shape-rectangle u-list-item-2">
-            <div class="u-container-layout u-similar-container u-container-layout-2">
-              <h3 class="u-text u-text-3">Rutgers CIRC</h3>
-              <p class="u-text u-text-4">I developed modules to generate randomized problems used in Rutgers online education homeworks and exams.</p>
-              <img src="images/Rutgers_Circ_Logo.png" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-2" data-image-width="1600" data-image-height="511">
+          <div class="u-container-style u-custom-color-1 u-list-item u-radius-50 u-repeater-item u-shape-round u-list-item-2">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
+              <h3 class="u-align-center u-text u-text-3">Rutgers CIRC</h3>
+              <p class="u-align-left u-text u-text-4">I developed modules to generate randomized problems used in Rutgers online college education homeworks and exams.</p>
+              <img src="images/circ.jpg" alt="" class="u-image u-image-round u-preserve-proportions u-radius-10 u-image-2" data-image-width="267" data-image-height="272">
             </div>
           </div>
-          <div class="u-black u-border-10 u-border-custom-color-1 u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-3">
-            <div class="u-container-layout u-similar-container u-container-layout-3">
-              <h3 class="u-text u-text-5">Photography</h3>
-              <p class="u-text u-text-6">I've learned how to manually adjust shutter speed, aperture, and ISO levels, but I still need to work on shot composition and post-editing.</p>
-              <img src="images/20200801-IMG_3389.jpg" alt="" class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-contain u-image-default u-image-3">
+          <div class="u-container-style u-custom-color-1 u-list-item u-radius-50 u-repeater-item u-shape-round u-list-item-3">
+            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
+              <h3 class="u-align-center u-text u-text-5">Photography</h3>
+              <p class="u-align-left u-text u-text-6">I've learned how to manually adjust shutter speed, aperture, and ISO levels, but I still need to work on shot composition and post-editing.</p>
+              <img src="images/20200828-IMG_3949.jpg" alt="" class="u-image u-image-round u-preserve-proportions u-radius-10 u-image-3" data-image-width="1600" data-image-height="1067">
             </div>
           </div>
         </div>
@@ -97,7 +95,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-1 u-footer u-footer" id="sec-4c1a"><div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" target="_blank" href="https://www.instagram.com/maxwellwangg"><span class="u-icon u-icon-circle u-social-instagram u-social-type-fill u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4981"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0px" y="0px" id="svg-4981"><path d="M56.1,0C25.1,0,0,25.1,0,56.1c0,31,25.1,56.1,56.1,56.1c31,0,56.1-25.1,56.1-56.1C112.2,25.1,87.1,0,56.1,0z M90.6,73.4c0,9.6-7.8,17.5-17.5,17.5H38.6c-9.6,0-17.5-7.9-17.5-17.6V38.8c0-9.6,7.8-17.5,17.5-17.5h34.5c9.6,0,17.5,7.8,17.5,17.5 V73.4z"></path><path d="M73.1,28.9H38.6c-5.4,0-9.9,4.4-9.9,9.9v34.5c0,5.4,4.4,9.9,9.9,9.9h34.5c5.4,0,9.9-4.4,9.9-9.9V38.8 C83,33.4,78.6,28.9,73.1,28.9z M55.9,74C46,74,38,66,38,56.1c0-9.9,8-17.9,17.9-17.9c9.9,0,17.9,8,17.9,17.9 C73.8,66,65.8,74,55.9,74z M74.3,41.9c-2.3,0-4.2-1.9-4.2-4.2s1.9-4.2,4.2-4.2c2.3,0,4.2,1.9,4.2,4.2S76.6,41.9,74.3,41.9z"></path><path d="M55.9,45.8c-5.7,0-10.4,4.6-10.3,10.3c0,5.7,4.6,10.3,10.3,10.3s10.3-4.6,10.3-10.3 C66.2,50.4,61.6,45.8,55.9,45.8z"></path></svg></span>
           </a>
